# Gen-AI-Semester-Project-Patient-Hospital-Discharge-Summaries

./: .gitignore  COMPRESSION_PIPELINE_OVERVIEW.md  CUDA_ERROR_COMPLETE_FIX.md  DEPENDENCIES.md  README.md  clinical_discharge_summarization_peft.ipynb  data_cleaning.ipynb  medgemma_model_evaluation.ipynb  pyproject.toml  requirements.txt  two_stage_compression_pipeline.ipynb
compression_results/: compression_pipeline_results.csv  compression_pipeline_results.json  summary_statistics.json
evaluation_results/: evaluation_results.csv  summary_statistics.json
