[project]
name = "gen-ai-semester-project-patient-hospital-discharge-summaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "hf-xet>=1.2.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "peft>=0.18.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
    # Data cleaning and preprocessing libraries
    "kagglehub>=0.3.8",
    "matplotlib>=3.9.0",
    "nltk>=3.9.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    # Two-stage compression pipeline libraries
    "scispacy>=0.5.4",
    "spacy>=3.7.0",
]
